# Arcnum

./: .clang-format  .gitignore  Arcnum.sln  Arcnum.vcxproj  Arcnum.vcxproj.filters  CMakeLists.txt  CircularIgnore.json  Shader.props  Shader.targets  Shader.xml  Spark.vcxproj  Spark.vcxproj.filters  cbuild-workspace.toml  dependencies.txt  imgui.ini  install_dependencies.py  premake5.lua  update_project.py
Arcnum/: Arcnum.vcxproj  CMakeLists.txt  cforge.toml
Arcnum/cmake/: version.h.in
Arcnum/src/: main.cpp
Spark/: CMakeLists.txt  Spark.vcxproj  Spark.vcxproj.filters  cbuild.toml  cforge.toml  update.py  version.txt
Spark/cmake/: version.h.in
Spark/core/: api.hpp  engine.hpp  pch.hpp  spark.hpp  spark_main.cpp  spark_main.hpp  std_include.hpp  types.hpp
Spark/core/Math/: randTester.cpp
Spark/core/ai/: ai.hpp
Spark/core/animation/: animation.hpp
Spark/core/app/: api.cpp  api.hpp  app.cpp  app.hpp  app_interface.cpp  app_interface.hpp  application.cpp  application.hpp  asset.hpp
Spark/core/asset/: asset.hpp
Spark/core/audio/: audio.cpp  audio.hpp  sound.hpp
Spark/core/ecs/: component.hpp  ecs.cpp  ecs.hpp  ecs_events.hpp  entity.hpp  observer.cpp  observer.hpp  query.hpp  resource.hpp  system.hpp
Spark/core/event/: ecs_events.hpp  event.hpp  event_handler.hpp  event_type.hpp  input_events.hpp  window_events.hpp
Spark/core/events/: event.hpp  sub.cpp  sub.hpp
Spark/core/lighting/: light.hpp  lighting.hpp
Spark/core/logging/: log.cpp  log.hpp
Spark/core/math/: constants.hpp  math.hpp  math_types.hpp  random.cpp  random.hpp
Spark/core/net/: chat_message.hpp  net_common.hpp  packet.cpp  packet.hpp  serializeable.cpp  serializeable.hpp  tcp.hpp  udp.hpp
Spark/core/physics/: aabb.cpp  aabb.hpp  collision_shape.hpp  gravity.hpp  physics.cpp  physics.hpp  rigid_body.cpp  rigid_body.hpp
Spark/core/profile/: fps.hpp
Spark/core/render/: buffer.hpp  camera.hpp  game_object.hpp  material.hpp  mesh.hpp  model.hpp  render.cpp  render_types.hpp  renderer.cpp  renderer.hpp  shader.hpp  uniform.hpp  vertex.hpp
Spark/core/renderer/: frustum.cpp  frustum.hpp  instancer.cpp  instancer.hpp  layer.hpp  layer_stack.hpp  octree.cpp  octree.hpp  renderer.cpp  renderer.hpp
Spark/core/resource/: asset.hpp  resource.hpp
Spark/core/scene/: octree.cpp  octree.hpp  scene.cpp  scene.hpp  scene_manager.hpp  scene_partition.hpp  transform.cpp  transform.hpp
Spark/core/system/: file_serializer.cpp  file_serializer.hpp  manager.hpp  registry.hpp  serializer.hpp
Spark/core/tests/: test.cpp  test.hpp
Spark/core/ui/: ui.cpp  ui.hpp
Spark/core/user/: camera.hpp  control.cpp  control.hpp
Spark/core/util/: assert.hpp  defines.hpp  file.cpp  file.hpp  fps.hpp  general.hpp  gl.hpp  log.cpp  log.hpp  macros.hpp  math.hpp  (+14 more)
Spark/include/: spark.hpp  spark_alloc.hpp  spark_application.hpp  spark_application.inl  spark_asset.hpp  spark_bump_allocator.hpp  spark_camera.hpp  spark_command.hpp  spark_command_queue.hpp  spark_defer.hpp  spark_defines.hpp  spark_delta_time.hpp  spark_dx.hpp  spark_ecs.hpp  spark_event.hpp  spark_event_layer.hpp  spark_event_queue.hpp  spark_events.hpp  spark_factory.hpp  spark_file_serialization.hpp  spark_gl.hpp  spark_graphics_api.hpp  spark_item.hpp  spark_item.inl  spark_layer.hpp  spark_layer_stack.hpp  spark_log.hpp  spark_math.hpp  spark_math_types.hpp  spark_memory_serialization.hpp  spark_mesh.hpp  spark_pch.hpp  spark_render_command.hpp  spark_render_components.hpp  spark_render_state.hpp  spark_render_system.hpp  spark_renderer.hpp  spark_renderer_layer.hpp  spark_serialization.hpp  spark_shader.hpp  (+8 more)
Spark/shaders/: fragment_shader.frag  lighting.frag  line.frag  material.frag  vertex_shader.spv  vertex_shader.vert
Spark/src/: spark_application.cpp  spark_event_layer.cpp  spark_event_queue.cpp  spark_file_serialization.cpp  spark_log.cpp  spark_memory_serialization.cpp  spark_pch.cpp  spark_window.cpp
(+377 files in other folders)
